--- a/index.html
+++ b/index.html
@@ -96,102 +96,20 @@
           </ol>
         </section>
       </div>
-
-      <!-- latest -->
+`
+      <!-- For Sale section -->
       <section>
         <div class="section-title title">
           <p>Latest</p>
           <div>
             <a href="/Games/game.html">
-
-              <button class="more-button">
-                More <img src="arrow.svg" class="arrow" />
-              </button>
-              </a>
+            <button class="more-button">
+              More <img src="arrow.svg" class="arrow" />
+            </button>
+            </a>
           </div>
         </div>
-        <div class="latest-container">
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/fifa-2024.html">
-                <img
-                  src="Game_Images/fc_24.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">FIFA 2024</span>
-                <span class="game-description">Play football online</span>
-              </div>
-              <span class="price"> 3.99$/Monthly*</span
-              ><a href="/Games/fifa-2024.html">
-                <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/valorant.html">
-                <img
-                  src="Game_Images/valorant.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">Valorant</span>
-                <span class="game-description">5v5 Online shooter</span>
-              </div>
-              <span class="price">Free</span>
-                <a href="/Games/valorant.html">
-                  <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/cyberpunk-2077.html">
-                <img
-                  src="Game_Images/cyberpunk.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">Cyberpunk 2077</span>
-                <span class="game-description">Challange the world</span>
-              </div>
-              <span class="price"> 89.99$</span
-              ><a href="/Games/cyberpunk-2077.html">
-                <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
+        <section id="latest-section"> </section>
       </section>
 
       <!-- news -->
@@ -254,105 +172,19 @@
         </div>
       </section>
 
-      <!-- sale -->
+      <!-- For Sale section -->
       <section>
         <div class="section-title title">
           <p>For Sale</p>
           <div>
             <a href="/Games/game.html">
-
-              <button class="more-button">
-                More <img src="arrow.svg" class="arrow" />
-              </button>
-              </a>
+            <button class="more-button">
+              More <img src="arrow.svg" class="arrow" />
+            </button>
+            </a>
           </div>
         </div>
-        <div class="latest-container">
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/fortnite.html">
-                <img
-                  src="Game_Images/fortnite.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">Fortnite</span>
-                <span class="game-description">100 players 1 winner</span>
-              </div>
-              <span class="price-for-sale"> 9.99$</span>
-              <span class="price"> Free</span>
-              <a href="/Games/fortnite.html">
-                <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/among-us.html">
-                <img
-                  src="Game_Images/among_us.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">Among Us</span>
-                <span class="game-description">Find the imposotor to win</span>
-              </div>
-              <span class="price-for-sale"> 9.99$</span>
-              <span class="price"> 3.99$</span
-              ><a href="/Games/among-us.html">
-                <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="game-card">
-            <div class="image-container">
-              <a href="/Games/watch-dogs-2.html">
-                <img
-                  src="Game_Images/watch_dogs.avif"
-                  alt="Game Image"
-                  class="game-card-image"
-                />
-              </a>
-            </div>
-            <div class="info-container">
-              <div class="title-container">
-                <span class="game-name">Watch Dogs 2</span>
-                <span class="game-description"
-                  >All the power in your hands
-                </span>
-              </div>
-              <span class="price-for-sale"> 19.99$</span>
-              <span class="price"> 10.99$</span>
-              <a href="/Games/watch-dogs-2.html">
-                <div class="button-container">
-                  <button class="read-more-btn">Read more</button>
-                  <button class="buy-btn">
-                    <img src="/bag.svg" alt="" class="bag-img" />
-                  </button>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
+        <section id="for-sale-section"> </section>
       </section>
 
       <!-- Recomended -->
@@ -361,7 +193,6 @@
           <p>Recomended</p>
           <div>
             <a href="/Games/game.html">
-
             <button class="more-button">
               More <img src="arrow.svg" class="arrow" />
             </button>
