--- a/Games/game.html
+++ b/Games/game.html
@@ -6,7 +6,6 @@
   <title>Games</title>
   <link rel="stylesheet" href="../index.css">
   <link rel="stylesheet" href="../global.css">
-
   <link rel="stylesheet" href="game.css">
 </head>
 <body>
@@ -26,142 +25,10 @@
     </div>
   </nav>
   <div class="main-container">
-    <div class="games-container">
+    <div class="games-container" id="game-container">
+  
 
-  <div class="game-card">
-    <div class="image-container">
-      <a href="/Games/gtaV.html">
-        <img
-          src="../Game_Images/gtaV.avif"
-          alt="Game Image"
-          class="game-card-image"
-        />
-      </a>
-    </div>
-    <div class="info-container">
-      <div class="title-container">
-        <span class="game-name">GTA V</span>
-        <span class="game-description">Play football online</span>
-      </div>
-      <span class="price"> 19.99$</span
-      ><a href="/Games/gtaV.html">
-        <div class="button-container">
-          <button class="read-more-btn">Read more</button>
-          <button class="buy-btn">
-            <img src="/bag.svg" alt="" class="bag-img" />
-          </button>
-        </div>
-      </a>
-    </div>
-  </div>
 
-  <div class="game-card">
-    <div class="image-container">
-      <a href="/Games/gtaV.html">
-        <img
-          src="../Game_Images/gtaV.avif"
-          alt="Game Image"
-          class="game-card-image"
-        />
-      </a>
-    </div>
-    <div class="info-container">
-      <div class="title-container">
-        <span class="game-name">GTA V</span>
-        <span class="game-description">Play football online</span>
-      </div>
-      <span class="price"> 19.99$</span
-      ><a href="/Games/gtaV.html">
-        <div class="button-container">
-          <button class="read-more-btn">Read more</button>
-          <button class="buy-btn">
-            <img src="/bag.svg" alt="" class="bag-img" />
-          </button>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <div class="game-card">
-    <div class="image-container">
-      <a href="/Games/gtaV.html">
-        <img
-          src="../Game_Images/gtaV.avif"
-          alt="Game Image"
-          class="game-card-image"
-        />
-      </a>
-    </div>
-    <div class="info-container">
-      <div class="title-container">
-        <span class="game-name">GTA V</span>
-        <span class="game-description">Play football online</span>
-      </div>
-      <span class="price"> 19.99$</span
-      ><a href="/Games/gtaV.html">
-        <div class="button-container">
-          <button class="read-more-btn">Read more</button>
-          <button class="buy-btn">
-            <img src="/bag.svg" alt="" class="bag-img" />
-          </button>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <div class="game-card">
-    <div class="image-container">
-      <a href="/Games/gtaV.html">
-        <img
-          src="../Game_Images/gtaV.avif"
-          alt="Game Image"
-          class="game-card-image"
-        />
-      </a>
-    </div>
-    <div class="info-container">
-      <div class="title-container">
-        <span class="game-name">GTA V</span>
-        <span class="game-description">Play football online</span>
-      </div>
-      <span class="price"> 19.99$</span
-      ><a href="/Games/gtaV.html">
-        <div class="button-container">
-          <button class="read-more-btn">Read more</button>
-          <button class="buy-btn">
-            <img src="/bag.svg" alt="" class="bag-img" />
-          </button>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <div class="game-card">
-    <div class="image-container">
-      <a href="/Games/gtaV.html">
-        <img
-          src="../Game_Images/gtaV.avif"
-          alt="Game Image"
-          class="game-card-image"
-        />
-      </a>
-    </div>
-    <div class="info-container">
-      <div class="title-container">
-        <span class="game-name">GTA V</span>
-        <span class="game-description">Play football online</span>
-      </div>
-      <span class="price"> 19.99$</span
-      ><a href="/Games/gtaV.html">
-        <div class="button-container">
-          <button class="read-more-btn">Read more</button>
-          <button class="buy-btn">
-            <img src="/bag.svg" alt="" class="bag-img" />
-          </button>
-        </div>
-      </a>
-    </div>
-  </div>
 </div>
 </div>
 <div class="footer-color">
@@ -223,5 +90,7 @@
     </footer>
   </div>
 </div>
+<script src="Games.js"></script>
+
 </body>
 </html>
