--- a/Games/game.html
+++ b/Games/game.html
@@ -1,96 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Games</title>
-  <link rel="stylesheet" href="../index.css">
-  <link rel="stylesheet" href="../global.css">
-  <link rel="stylesheet" href="game.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Games</title>
+    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../global.css" />
+    <link rel="stylesheet" href="game.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="main-container">
+        <div class="topnav" id="myTopnav">
+          <img src="../logo.png" alt="" class="navlogo" />
+          <a href="../index.html" class="active">Home</a>
+          <a href="../News/news.html">News</a>
+          <a href="../ContactUs/contactUs.html">Contact</a>
+          <a href="../About/About.html">About</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
+          </a>
+        </div>
+      </div>
+    </nav>
 
-  <nav class="navbar">
+    <div class="main-container search-container">
+      <input type="text" id="searchInput" placeholder="Search for games" />
+
+      <div id="matchingGamesContainer"></div>
+    </div>
+
     <div class="main-container">
-      <div class="topnav" id="myTopnav">
-        <img src="../logo.png" alt="" class="navlogo" />
-        <a href="../index.html" class="active">Home</a>
-                <a href="../News/news.html" >News</a>
-                <a href="../ContactUs/contactUs.html">Contact</a>
-                <a href="../About/About.html">About</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="menu"><img src="menu.svg" class="menu-icon" /></i>
-        </a>
+      <div class="games-container" id="game-container"></div>
+    </div>
+    <div class="footer-color">
+      <div class="main-container">
+        <footer>
+          <div>
+            <img src="/logo.png" alt="" />
+            <h1>Online Game's Shop</h1>
+            <h3>Rrezon & Enes Solutions TM</h3>
+            <h4>Prizren 20000</h4>
+            <h4>Rruga Tirana, B11</h4>
+          </div>
+          <div class="footer-links">
+            <div class="footer-link">
+              <a href="home.html">Home</a>
+            </div>
+            <div class="footer-link">
+              <a href="news.html">News</a>
+            </div>
+            <div class="footer-link">
+              <a href="contact.html">Contact</a>
+            </div>
+            <div class="footer-link">
+              <a href="about.html">About</a>
+            </div>
+            <div class="footer-link">
+              <a href="latest.html">Latest</a>
+            </div>
+            <div class="footer-link">
+              <a href="sale.html">Sale</a>
+            </div>
+            <div class="footer-link">
+              <a href="recommended.html">Recommended</a>
+            </div>
+          </div>
+          <div class="newsletter">
+            <form action="" method="post">
+              <h1>Subscribe to our newsletter</h1>
+              <label for="email">Email</label>
+              <div class="input-container">
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  required
+                  class="email-input"
+                />
+                <button
+                  type="submit"
+                  class="subscribe-button"
+                  form="my-form"
+                  onclick="alert('You succesfully subscribed to our newsletter')"
+                >
+                  Subscribe
+                </button>
+              </div>
+            </form>
+          </div>
+        </footer>
       </div>
     </div>
-  </nav>
-  <div class="main-container">
-    <div class="games-container" id="game-container">
-  
+    <script src="Games.js"></script>
+    <script src="../navbar.js"></script>
 
-
-</div>
-</div>
-<div class="footer-color">
-  <div class="main-container">
-    <footer>
-      <div>
-        <img src="/logo.png" alt="" />
-        <h1>Online Game's Shop</h1>
-        <h3>Rrezon & Enes Solutions TM</h3>
-        <h4>Prizren 20000</h4>
-        <h4>Rruga Tirana, B11</h4>
-      </div>
-      <div class="footer-links">
-        <div class="footer-link">
-          <a href="home.html">Home</a>
-        </div>
-        <div class="footer-link">
-          <a href="news.html">News</a>
-        </div>
-        <div class="footer-link">
-          <a href="contact.html">Contact</a>
-        </div>
-        <div class="footer-link">
-          <a href="about.html">About</a>
-        </div>
-        <div class="footer-link">
-          <a href="latest.html">Latest</a>
-        </div>
-        <div class="footer-link">
-          <a href="sale.html">Sale</a>
-        </div>
-        <div class="footer-link">
-          <a href="recommended.html">Recommended</a>
-        </div>
-      </div>
-      <div class="newsletter">
-        <form action="" method="post">
-          <h1>Subscribe to our newsletter</h1>
-          <label for="email">Email</label>
-          <div class="input-container">
-            <input
-              type="email"
-              id="email"
-              name="email"
-              required
-              class="email-input"
-            />
-            <button
-              type="submit"
-              class="subscribe-button"
-              form="my-form"
-              onclick="alert('You succesfully subscribed to our newsletter')"
-            >
-              Subscribe
-            </button>
-          </div>
-        </form>
-      </div>
-    </footer>
-  </div>
-</div>
-<script src="Games.js"></script>
-
-</body>
+  </body>
 </html>
